Update PluginConfig.java
Simplified